--- a/src/app/list-classes/list-classes.component.html
+++ b/src/app/list-classes/list-classes.component.html
@@ -23,9 +23,9 @@
                     <td>{{ classes.nomClasse }}</td>
                     <td>{{ classes.niveauClasse }}</td>
                     <td>
-                        <a class="add" title="Add" data-toggle="tooltip"><i class="material-icons">&#xE03B;</i></a>
-                        <a class="edit" title="Edit" data-toggle="tooltip"><i class="material-icons">&#xE254;</i></a>
-                        <a class="delete" title="Delete" data-toggle="tooltip"><i class="material-icons">&#xE872;</i></a>
+                        <a class="add" title="Add" data-toggle="tooltip" ><i class="material-icons">&#xE03B;</i></a>
+                        <a class="edit" title="Edit" data-toggle="tooltip" (click)="OnUpdateClasse(classes.idclasse)"><i class="material-icons">&#xE254;</i></a>
+                        <a class="delete" title="Delete" data-toggle="tooltip" (click)="OnDeleteclasse(classes.idclasse)"><i class="material-icons">&#xE872;</i></a>
                     </td>
                 </tr>
             </tbody>
