--- a/src/app/add-matiere/add-matiere.component.html
+++ b/src/app/add-matiere/add-matiere.component.html
@@ -6,20 +6,20 @@
             <h3 class="panel-title">Update Classe</h3>
           </div>
           <div class="panel-body">
-            <form [formGroup]="frominput" (ngSubmit)="updateclasse()">
+            <form [formGroup]="frominput" (ngSubmit)="addmatiere()">
               <div class="form-group">
                 <label for="id">ID:</label>
-                <input type="text" class="form-control" id="id" formControlName="id" >
+                <input type="text" class="form-control" id="id" formControlName="id" readonly>
               </div>
               <div class="form-group">
-                <label for="nomclasse">Nom Classe:</label>
-                <input type="text" class="form-control" id="nomclasse" formControlName="nomclasse">
+                <label for="nommat">Nom Matiere:</label>
+                <input type="text" class="form-control" id="nommat" formControlName="nommat">
               </div>
               <div class="form-group">
-                <label for="niveauclasse">Niveau Classe:</label>
-                <input type="text" class="form-control" id="niveauclasse" formControlName="niveauclasse">
+                <label for="coiffmat">coefficient Matiere:</label>
+                <input type="number" class="form-control" id="coiffmat" formControlName="coiffmat">
               </div>
-              <button type="submit" class="btn btn-primary">Update</button>
+              <button type="submit" class="btn btn-primary">ADD</button>
             </form>
           </div>
         </div>
