--- a/src/app/update-specialite/update-specialite.component.html
+++ b/src/app/update-specialite/update-specialite.component.html
@@ -6,19 +6,16 @@
             <h3 class="panel-title">Update Classe</h3>
           </div>
           <div class="panel-body">
-            <form [formGroup]="frominput" (ngSubmit)="updateclasse()">
+            <form [formGroup]="frominput" (ngSubmit)="updatespec()">
               <div class="form-group">
                 <label for="id">ID:</label>
-                <input type="text" class="form-control" id="id" formControlName="id" >
+                <input type="number" class="form-control" id="id" formControlName="id" readonly>
               </div>
               <div class="form-group">
-                <label for="nomclasse">Nom Classe:</label>
-                <input type="text" class="form-control" id="nomclasse" formControlName="nomclasse">
+                <label for="nomspec">Nom specialite:</label>
+                <input type="text" class="form-control" id="nomspec" formControlName="nomspec">
               </div>
-              <div class="form-group">
-                <label for="niveauclasse">Niveau Classe:</label>
-                <input type="text" class="form-control" id="niveauclasse" formControlName="niveauclasse">
-              </div>
+             
               <button type="submit" class="btn btn-primary">Update</button>
             </form>
           </div>
