--- a/src/app/update-matiere/update-matiere.component.html
+++ b/src/app/update-matiere/update-matiere.component.html
@@ -16,9 +16,10 @@
                 <input type="text" class="form-control" id="nommat" formControlName="nommat">
               </div>
               <div class="form-group">
-                <label for="coiffmat">coefficient Matiere:</label>
-                <input type="text" class="form-control" id="coiffmat" formControlName="coiffmat">
+                <label for="coiffmat">Coefficient Matière:</label>
+                <input type="number" class="form-control" id="coiffmat" formControlName="coiffmat">
               </div>
+              
               <button type="submit" class="btn btn-primary">Update</button>
             </form>
           </div>
