--- a/src/app/list-matieres/list-matieres.component.html
+++ b/src/app/list-matieres/list-matieres.component.html
@@ -37,7 +37,7 @@
                 <tr *ngFor="let mat of listmatieres">
                     <td>{{ mat.idMatiere}}</td>
                     <td>{{ mat.nomMatiere }}</td>
-                    <td>{{ mat.CoifMatiere }}</td>
+                    <td>{{ mat.coifMatiere }}</td>
                     <td>
                         <a class="add" title="Add" data-toggle="tooltip">
                             <i class="material-icons">&#xE03B;</i>
