--- a/src/app/list-mmodules/list-mmodules.component.html
+++ b/src/app/list-mmodules/list-mmodules.component.html
@@ -46,7 +46,7 @@
             <tr *ngFor="let classes of listmodules">
                 <td>{{ classes.idModule}}</td>
                 <td>{{ classes.nomModule }}</td>
-                <td>{{ classes.CoifModule }}</td>
+                <td>{{ classes.coifModule }}</td>
                 <td>
                     <a class="add" title="Add" data-toggle="tooltip">
                         <i class="material-icons">&#xE03B;</i>
