--- a/src/app/list-classes/list-classes.component.html
+++ b/src/app/list-classes/list-classes.component.html
@@ -21,7 +21,7 @@
     <div class="table-wrapper">
         <div class="table-title">
             <div class="row">
-                <div class="col-sm-8"><h2>CLasses <b>Details</b></h2></div>
+                <div class="col-sm-8"><h2><b>CLasses Details</b></h2></div>
                 <div class="col-sm-4 text-end"> <!-- Utilisez la classe "text-end" pour aligner le contenu à droite -->
                         <button type="button" class="btn btn-info add-new" (click)="addNewClasse()"><i class="fa fa-plus"></i> Add New</button>
                 </div>
