--- a/src/app/list-matieres/list-matieres.component.html
+++ b/src/app/list-matieres/list-matieres.component.html
@@ -18,7 +18,7 @@
     <div class="table-wrapper">
         <div class="table-title">
             <div class="row">
-                <div class="col-sm-8"><h2>Matieres <b>Details</b></h2></div>
+                <div class="col-sm-8"><h2><b>Matieres Details</b></h2></div>
                 <div class="col-sm-4 text-end"> <!-- Utilisez la classe "text-end" pour aligner le contenu à droite -->
                     <button type="button" class="btn btn-info add-new" (click)="addNewMatiere()"><i class="fa fa-plus"></i> Add New</button>
                 </div>
