--- a/src/app/list-mmodules/list-mmodules.component.html
+++ b/src/app/list-mmodules/list-mmodules.component.html
@@ -23,7 +23,7 @@
         <div class="table-title">
             <div class="row">
                 <div class="col-sm-8">
-                    <h2>Modules <b>Details</b></h2>
+                    <h2><b>Modules Details</b></h2>
                 </div>
                 <div class="col-sm-4 text-end">
                     <!-- Utilisez la classe "text-end" pour a- Utilisez la classe "text-end" pour aligner le contenu à droite -->
