--- a/src/app/list-specialites/list-specialites.component.html
+++ b/src/app/list-specialites/list-specialites.component.html
@@ -19,7 +19,7 @@
     <div class="table-wrapper">
         <div class="table-title">
             <div class="row">
-                <div class="col-sm-8"><h2>Specialites <b>Details</b></h2></div>
+                <div class="col-sm-8"><h2><b>Specialites Details</b></h2></div>
                     <div class="col-sm-4 text-end"> <!-- Utilisez la classe "text-end" pour aligner le contenu à droite -->
                         <button type="button" class="btn btn-info add-new" (click)="addNewSpec()"><i class="fa fa-plus"></i> Add New</button>
                 </div>
