--- a/src/app/update-classe/update-classe.component.html
+++ b/src/app/update-classe/update-classe.component.html
@@ -1,29 +1,48 @@
-<div class="container">
-    <div class="row">
-      <div class="col-md-6 col-md-offset-3">
-        <div class="panel panel-default">
-          <div class="panel-heading">
-            <h3 class="panel-title">Update Classe</h3>
-          </div>
-          <div class="panel-body">
-            <form [formGroup]="frominput" (ngSubmit)="updateclasse()">
-              <div class="form-group">
-                <label for="id">ID:</label>
-                <input type="text" class="form-control" id="id" formControlName="id" >
-              </div>
-              <div class="form-group">
-                <label for="nomclasse">Nom Classe:</label>
-                <input type="text" class="form-control" id="nomclasse" formControlName="nomclasse">
-              </div>
-              <div class="form-group">
-                <label for="niveauclasse">Niveau Classe:</label>
-                <input type="text" class="form-control" id="niveauclasse" formControlName="niveauclasse">
-              </div>
-              <button type="submit" class="btn btn-primary">Update</button>
-            </form>
-          </div>
-        </div>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <div class="container-fluid">
+      <a class="navbar-brand me-auto" href="#">Mon Application</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+          <ul class="navbar-nav">
+              <li class="nav-item">
+                  <a class="nav-link" href="/listclasses">
+                      <i class="bi bi-arrow-left"></i> Retour
+                  </a>
+              </li>
+          </ul>
       </div>
-    </div>
   </div>
-  
+</nav>
+
+<div class="container">
+  <div class="row justify-content-center mt-4">
+      <div class="col-md-8">
+          <div class="panel panel-default">
+              <div class="panel-heading text-center">
+                  <h3 class="panel-title">Update Classe</h3>
+              </div>
+              <div class="panel-body">
+                  <form [formGroup]="frominput" (ngSubmit)="updateclasse()">
+                      <div class="form-group">
+                          <label for="id">ID:</label>
+                          <input type="text" class="form-control" id="id" formControlName="id">
+                      </div>
+                      <div class="form-group">
+                          <label for="nomclasse">Nom Classe:</label>
+                          <input type="text" class="form-control" id="nomclasse" formControlName="nomclasse">
+                      </div>
+                      <div class="form-group">
+                          <label for="niveauclasse">Niveau Classe:</label>
+                          <input type="text" class="form-control" id="niveauclasse" formControlName="niveauclasse">
+                      </div>
+                      <div class="text-center">
+                          <button type="submit" class="btn btn-primary btn-update">Update</button> <!-- Ajout de la classe "btn-update" -->
+                      </div>
+                  </form>
+              </div>
+          </div>
+      </div>
+  </div>
+</div>
