--- a/src/app/addmodule/addmodule.component.html
+++ b/src/app/addmodule/addmodule.component.html
@@ -1,29 +1,48 @@
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <div class="container-fluid">
+    <a class="navbar-brand me-auto" href="#">Mon Application</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="/listmodules">
+            <i class="bi bi-arrow-left"></i> Retour
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
 <div class="container">
-    <div class="row">
-      <div class="col-md-6 col-md-offset-3">
-        <div class="panel panel-default">
-          <div class="panel-heading">
-            <h3 class="panel-title">Update Module</h3>
-          </div>
-          <div class="panel-body">
-            <form [formGroup]="frominput" (ngSubmit)="addmodule()">
-              <div class="form-group">
-                <label for="id">ID:</label>
-                <input type="number" class="form-control" id="id" formControlName="id" readonly>
-              </div>
-              <div class="form-group">
-                <label for="nommod">Nom Module:</label>
-                <input type="text" class="form-control" id="nommod" formControlName="nommod">
-              </div>
-              <div class="form-group">
-                <label for="coifmod">coefficient Module:</label>
-                <input type="text" class="form-control" id="coifmod" formControlName="coifmod">
-              </div>
-              <button type="submit" class="btn btn-primary">ADD</button>
-            </form>
-          </div>
+  <div class="row justify-content-center mt-4">
+    <div class="col-md-6">
+      <div class="panel panel-default">
+        <div class="panel-heading text-center">
+          <h3 class="panel-title">Update Module</h3>
+        </div>
+        <div class="panel-body">
+          <form [formGroup]="frominput" (ngSubmit)="addmodule()">
+            <div class="form-group">
+              <label for="id">ID:</label>
+              <input type="text" class="form-control" id="id" formControlName="id" readonly>
+            </div>
+            <div class="form-group">
+              <label for="nommod">Nom Module:</label>
+              <input type="text" class="form-control" id="nommod" formControlName="nommod">
+            </div>
+            <div class="form-group">
+              <label for="coifmod">Coefficient Module:</label>
+              <input type="text" class="form-control" id="coifmod" formControlName="coifmod">
+            </div>
+            <div class="text-center">
+              <button type="submit" class="btn btn-primary btn-add">ADD</button>
+            </div>
+          </form>
         </div>
       </div>
     </div>
   </div>
-  
+</div>
