--- a/src/app/list-matieres/list-matieres.component.html
+++ b/src/app/list-matieres/list-matieres.component.html
@@ -30,6 +30,7 @@
                     <th>id matiere</th>
                     <th>nom matiere</th>
                     <th>coefficient matiere</th>
+                    <th>module</th>
                     <th>Actions</th>
                 </tr>
             </thead>
@@ -38,6 +39,7 @@
                     <td>{{ mat.idMatiere}}</td>
                     <td>{{ mat.nomMatiere }}</td>
                     <td>{{ mat.coifMatiere }}</td>
+                    <td>{{ mat.m.nomModule }}</td>
                     <td>
                         <a class="add" title="Add" data-toggle="tooltip">
                             <i class="material-icons">&#xE03B;</i>
