--- a/src/app/update-matiere/update-matiere.component.html
+++ b/src/app/update-matiere/update-matiere.component.html
@@ -37,6 +37,13 @@
                           <label for="coiffmat">Coefficient Matière:</label>
                           <input type="number" class="form-control" id="coiffmat" formControlName="coiffmat">
                       </div>
+                      <div class="form-group">
+                        <label for="module">Module:</label>
+                        <select class="form-control" id="module" formControlName="module">
+                          <option value="">Selectionner un module</option>
+                          <option *ngFor="let module of modules" [value]="module.idModule">{{ module.nomModule }}</option>
+                        </select>
+                      </div>
                       <div class="text-center">
                           <button type="submit" class="btn btn-primary btn-update">Update</button>
                       </div>
