--- a/src/app/etudiant-list/etudiant-list.component.html
+++ b/src/app/etudiant-list/etudiant-list.component.html
@@ -1,10 +1,24 @@
-<div class="container">
+<ul class="nav nav-pills nav-fill gap-2 p-1 small bg-primary rounded-5 shadow-sm" id="pillNav2" role="tablist" style="--bs-nav-link-color: var(--bs-white); --bs-nav-pills-link-active-color: var(--bs-primary); --bs-nav-pills-link-active-bg: var(--bs-white);">
+    <li class="nav-item" role="presentation">
+        <a class="nav-link active rounded-5" id="home-tab2" href="/listeEtudiants" role="tab" aria-selected="true">Etudiant</a>
+    </li>
+    <li class="nav-item" role="presentation">
+        <a class="nav-link rounded-5" id="profile-tab2" href="/listeNotes" role="tab" aria-selected="false">Note</a>
+    </li>
+    <!-- <li class="nav-item" role="presentation">
+        <a class="nav-link rounded-5" id="contact-tab2" href="/listclasses" role="tab" aria-selected="false">Classe</a>
+    </li>
+    <li class="nav-item" role="presentation">
+        <a class="nav-link rounded-5" id="extra-tab" href="/listspec" role="tab" aria-selected="false">Specialite</a>
+    </li> -->
+</ul>
+<div class="container-fluid">
     <div class="table-wrapper">
         <div class="table-title">
             <div class="row">
                 <div class="col-sm-8"><h2>Liste <b>Etudiants</b></h2></div>
-                <div class="col-sm-4">
-                    <button type="button" class="btn btn-info add-new"><i class="fa fa-plus"></i> Add New</button>
+                <div class="col-sm-4 text-end">
+                    <button type="button" class="btn btn-info add-new" (click)="addNewEtudiant()" style="color: white;"><i class="fa fa-plus"></i>Ajouter</button>
                 </div>
             </div>
         </div>
@@ -37,7 +51,7 @@
                     <td>{{ etd.daten }}</td>
                     <td>{{ etd.lieun}}</td>
                     <td>
-                        <a class="add" title="Add" data-toggle="tooltip" ><i class="material-icons">&#xE03B;</i></a>
+                        <a class="add" title="Add" data-toggle="tooltip"><i class="material-icons">&#xE03B;</i></a>
                         <a class="edit" title="Edit" data-toggle="tooltip" (click)="OnUpdateEtudiant(etd.id)"><i class="material-icons">&#xE254;</i></a>
                         <a class="delete" title="Delete" data-toggle="tooltip" (click)="OnDeleteEtudiant(etd.id)"><i class="material-icons">&#xE872;</i></a>
                     </td>
