--- a/src/app/etudiant-update/etudiant-update.component.html
+++ b/src/app/etudiant-update/etudiant-update.component.html
@@ -1,1 +1,74 @@
-<p>etudiant-update works!</p>
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <div class="container-fluid">
+        <a class="navbar-brand me-auto" href="#">Mon Application</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="/listeEtudiants">
+                        <i class="bi bi-arrow-left"></i> Retour
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+  </nav>
+<div class="container">
+    <div class="row justify-content-center mt-4">
+      <div class="col-md-8">
+        <div class="panel panel-default">
+          <div class="panel-heading text-center">
+            <h3 class="panel-title">Modifier Etudiant</h3>
+          </div>
+          <div class="panel-body">
+            <form [formGroup]="frominput" (ngSubmit)="updateEtudiant()">
+              <div class="form-group">
+                <label for="cin">CIN:</label>
+                <input type="number" class="form-control" id="cin" formControlName="cin">
+              </div>
+              <div class="form-group">
+                <label for="prenom">Prenom:</label>
+                <input type="text" class="form-control" id="prenom" formControlName="prenom">
+              </div>
+              <div class="form-group">
+                <label for="nom">Nom:</label>
+                <input type="text" class="form-control" id="nom" formControlName="nom">
+              </div>
+              <div class="form-group">
+                <label for="email">Email:</label>
+                <input type="email" class="form-control" id="email" formControlName="email">
+              </div>
+              <div class="form-group">
+                <label for="tel">Tel:</label>
+                <input type="number" class="form-control" id="tel" formControlName="tel">
+              </div>
+              <div class="form-group">
+                <label for="adresse">Adresse:</label>
+                <input type="text" class="form-control" id="adresse" formControlName="adresse">
+              </div>
+              <div class="form-group">
+                <label for="id">Date naissance:</label>
+                <input type="date" class="form-control" id="daten" formControlName="daten">
+              </div>
+              <div class="form-group">
+                <label for="lieun">Lieu naissance:</label>
+                <input type="text" class="form-control" id="lieun" formControlName="lieun">
+              </div>
+              <div class="form-group">
+                <label for="classe">Classe:</label>
+                <select class="form-control" id="classe" formControlName="classe">
+                  <option value="">Selectionner une classe</option>
+                  <!-- Loop through available classes and create options -->
+                  <option *ngFor="let classe of classes" [value]="classe.idclasse">{{ classe.nomClasse }}</option>
+                </select>
+              </div>
+              <button type="submit" class="btn btn-primary btn-update">Modifier</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
