--- a/src/app/list-specialites/list-specialites.component.html
+++ b/src/app/list-specialites/list-specialites.component.html
@@ -1,7 +1,7 @@
 <ul class="nav nav-pills nav-fill gap-2 p-1 small bg-primary rounded-5 shadow-sm" id="pillNav2" role="tablist"
     style="--bs-nav-link-color: var(--bs-white); --bs-nav-pills-link-active-color: var(--bs-primary); --bs-nav-pills-link-active-bg: var(--bs-white);">
     <li class="nav-item" role="presentation">
-        <a class="nav-link active rounded-5" id="home-tab2" href="/listmatieres" role="tab"
+        <a class="nav-link rounded-5" id="home-tab2" href="/listmatieres" role="tab"
             aria-selected="true">Matiere</a>
     </li>
     <li class="nav-item" role="presentation">
@@ -12,7 +12,7 @@
     </li>
     <!-- Ajout du quatrième bouton -->
     <li class="nav-item" role="presentation">
-        <a class="nav-link rounded-5" id="extra-tab" href="/listspec" role="tab" aria-selected="false">Specialite</a>
+        <a class="nav-link active rounded-5" id="extra-tab" href="/listspec" role="tab" aria-selected="false">Specialite</a>
     </li>
 </ul>
 <div class="container-fluid">
