--- a/src/app/list-mmodules/list-mmodules.component.html
+++ b/src/app/list-mmodules/list-mmodules.component.html
@@ -28,8 +28,8 @@
                 <div class="col-sm-4 text-end">
                     <!-- Utilisez la classe "text-end" pour a- Utilisez la classe "text-end" pour aligner le contenu à droite -->
 
-                    <button type="button" class="btn btn-info add-new" (click)="addNewModule()"><i
-                            class="fa fa-plus"></i> Add New</button>
+                    <button type="button" class="btn btn-info add-new" (click)="addNewModule()" style="color: white;"><i
+                            class="fa fa-plus"></i>Ajouter</button>
                 </div>
             </div>
         </div>
