--- a/src/app/add-matiere/add-matiere.component.html
+++ b/src/app/add-matiere/add-matiere.component.html
@@ -21,7 +21,7 @@
     <div class="col-md-6">
       <div class="panel panel-default">
         <div class="panel-heading text-center">
-          <h3 class="panel-title">ADD Matiere</h3>
+          <h3 class="panel-title">Ajouter Matiere</h3>
         </div>
         <div class="panel-body">
           <form [formGroup]="frominput" (ngSubmit)="addmatiere()">
@@ -41,7 +41,7 @@
               </select>
             </div>
             <div class="text-center">
-              <button type="submit" class="btn btn-primary btn-add">ADD</button>
+              <button type="submit" class="btn btn-primary btn-add">Ajouter</button>
             </div>
           </form>
         </div>
