--- a/src/app/addmodule/addmodule.component.html
+++ b/src/app/addmodule/addmodule.component.html
@@ -21,14 +21,10 @@
     <div class="col-md-6">
       <div class="panel panel-default">
         <div class="panel-heading text-center">
-          <h3 class="panel-title">Update Module</h3>
+          <h3 class="panel-title">Ajouter Module</h3>
         </div>
         <div class="panel-body">
           <form [formGroup]="frominput" (ngSubmit)="addmodule()">
-            <div class="form-group">
-              <label for="id">ID:</label>
-              <input type="text" class="form-control" id="id" formControlName="id" readonly>
-            </div>
             <div class="form-group">
               <label for="nommod">Nom Module:</label>
               <input type="text" class="form-control" id="nommod" formControlName="nommod">
@@ -38,7 +34,7 @@
               <input type="text" class="form-control" id="coifmod" formControlName="coifmod">
             </div>
             <div class="text-center">
-              <button type="submit" class="btn btn-primary btn-add">ADD</button>
+              <button type="submit" class="btn btn-primary btn-add">Ajouter</button>
             </div>
           </form>
         </div>
