--- a/src/app/note-list/note-list.component.scss
+++ b/src/app/note-list/note-list.component.scss
@@ -82,3 +82,7 @@ table.table .form-control.error {
 // table.table td .add {
 //     display: none;
 // }
+.narrow-input {
+    width: 50px; /* Adjust the width as needed */
+  }
+  
