modif update titre en add

--- a/src/app/addclasse/addclasse.component.html
+++ b/src/app/addclasse/addclasse.component.html
@@ -21,7 +21,7 @@
     <div class="col-md-6">
       <div class="panel panel-default">
         <div class="panel-heading text-center">
-          <h3 class="panel-title">Update Classe</h3>
+          <h3 class="panel-title">Ajouter Classe</h3>
         </div>
         <div class="panel-body">
           <form [formGroup]="frominput" (ngSubmit)="addclasse()">
