cahnge bouton add en ajouter

--- a/src/app/add-specialite/add-specialite.component.html
+++ b/src/app/add-specialite/add-specialite.component.html
@@ -34,7 +34,7 @@
               <input type="text" class="form-control" id="nomspec" formControlName="nomspec">
             </div>
             <div class="text-center">
-              <button type="submit" class="btn btn-primary btn-add">ADD</button>
+              <button type="submit" class="btn btn-primary btn-add">Ajouter</button>
             </div>
           </form>
         </div>
