--- a/src/app/addclasse/addclasse.component.html
+++ b/src/app/addclasse/addclasse.component.html
@@ -34,7 +34,7 @@
               <input type="number" class="form-control" id="niveauclasse" formControlName="niveauclasse">
             </div>
             <div class="text-center">
-              <button type="submit" class="btn btn-primary btn-add">ADD</button>
+              <button type="submit" class="btn btn-primary btn-add">Ajouter</button>
             </div>
           </form>
         </div>
