--- a/src/app/list-matieres/list-matieres.component.html
+++ b/src/app/list-matieres/list-matieres.component.html
@@ -18,7 +18,7 @@
     <div class="table-wrapper">
         <div class="table-title">
             <div class="row">
-                <div class="col-sm-8"><h2><b>Matieres Details</b></h2></div>
+                <div class="col-sm-8"><h2><b>Liste Matieres</b></h2></div>
                 <div class="col-sm-4 text-end"> <!-- Utilisez la classe "text-end" pour aligner le contenu à droite -->
                     <button type="button" class="btn btn-info add-new" (click)="addNewMatiere()" style="color: white;"><i class="fa fa-plus"></i>Ajouter</button>
                 </div>
@@ -27,10 +27,10 @@
         <table class="table table-bordered">
             <thead>
                 <tr>
-                    <th>id matiere</th>
-                    <th>nom matiere</th>
-                    <th>coefficient matiere</th>
-                    <th>module</th>
+                    <th>ID Matiere</th>
+                    <th>Nom Matiere</th>
+                    <th>Coefficient Matiere</th>
+                    <th>Module</th>
                     <th>Actions</th>
                 </tr>
             </thead>
