--- a/src/app/list-specialites/list-specialites.component.html
+++ b/src/app/list-specialites/list-specialites.component.html
@@ -19,7 +19,7 @@
     <div class="table-wrapper">
         <div class="table-title">
             <div class="row">
-                <div class="col-sm-8"><h2><b>Specialites Details</b></h2></div>
+                <div class="col-sm-8"><h2><b>Liste Specialites</b></h2></div>
                     <div class="col-sm-4 text-end"> <!-- Utilisez la classe "text-end" pour aligner le contenu à droite -->
                         <button type="button" class="btn btn-info add-new" (click)="addNewSpec()" style="color: white;"><i class="fa fa-plus"></i>Ajouter</button>
                 </div>
@@ -28,8 +28,8 @@
         <table class="table table-bordered">
             <thead>
                 <tr>
-                    <th>id specialite</th>
-                    <th>nom specialite</th>
+                    <th>ID Specialite</th>
+                    <th>Nom Specialite</th>
                     <th>Actions</th>
                 </tr>
             </thead>
