--- a/src/app/updatemodule/updatemodule.component.html
+++ b/src/app/updatemodule/updatemodule.component.html
@@ -30,7 +30,7 @@
                           <input type="text" class="form-control" id="nommod" formControlName="nommod">
                       </div>
                       <div class="form-group">
-                          <label for="coifmod">coefficient Module:</label>
+                          <label for="coifmod">Coefficient Module:</label>
                           <input type="text" class="form-control" id="coifmod" formControlName="coifmod">
                       </div>
                       <div class="text-center">
