--- a/src/app/list-classes/list-classes.component.html
+++ b/src/app/list-classes/list-classes.component.html
@@ -21,7 +21,7 @@
     <div class="table-wrapper">
         <div class="table-title">
             <div class="row">
-                <div class="col-sm-8"><h2><b>CLasses Details</b></h2></div>
+                <div class="col-sm-8"><h2><b>Liste Classes</b></h2></div>
                 <div class="col-sm-4 text-end"> <!-- Utilisez la classe "text-end" pour aligner le contenu à droite -->
                         <button type="button" class="btn btn-info add-new" (click)="addNewClasse()" style="color: white;"><i class="fa fa-plus"></i>Ajouter</button>
                 </div>
@@ -30,9 +30,9 @@
         <table class="table table-bordered">
             <thead>
                 <tr>
-                    <th>id classe</th>
-                    <th>nom Classe</th>
-                    <th>niveau Classe</th>
+                    <th>ID Classe</th>
+                    <th>Nom Classe</th>
+                    <th>Niveau Classe</th>
                     <th>Actions</th>
                 </tr>
             </thead>
