--- a/src/app/list-mmodules/list-mmodules.component.html
+++ b/src/app/list-mmodules/list-mmodules.component.html
@@ -23,7 +23,7 @@
         <div class="table-title">
             <div class="row">
                 <div class="col-sm-8">
-                    <h2><b>Modules Details</b></h2>
+                    <h2><b>Liste Modules</b></h2>
                 </div>
                 <div class="col-sm-4 text-end">
                     <!-- Utilisez la classe "text-end" pour a- Utilisez la classe "text-end" pour aligner le contenu à droite -->
@@ -36,9 +36,9 @@
     <table class="table table-bordered">
         <thead>
             <tr>
-                <th>id Module</th>
-                <th>nom Module</th>
-                <th>coefficient Module</th>
+                <th>ID Module</th>
+                <th>Nom Module</th>
+                <th>Coefficient Module</th>
                 <th>Actions</th>
             </tr>
         </thead>
