--- a/src/app/note-list/note-list.component.html
+++ b/src/app/note-list/note-list.component.html
@@ -12,69 +12,83 @@
         <a class="nav-link rounded-5" id="extra-tab" href="/listspec" role="tab" aria-selected="false">Specialite</a>
     </li> -->
 </ul>
-<form [formGroup]="form">
-  <div class="form-group">
-    <label for="classe">Classe:</label>
-    <select class="form-control" id="cls" formControlName="cls" (change)="onClassChange()">
-      <option value="">Selectionner une classe</option>
-      <option *ngFor="let classe of classes" [value]="classe.idclasse">{{ classe.nomClasse }}</option>
-    </select>
-  </div>
-</form>
 
-<table class="table">
-    <thead>
-      <tr>
-        <th>Etudiant</th>
-        <th *ngFor="let module of modules" [attr.colspan]="module.listeMatieres.length*3">
-          <div>{{ module.nomModule }}</div>
-        </th>
-        <th>Actions</th>
-      </tr>
-      <tr>
-        <th></th>
-        <ng-container *ngFor="let matiere of matieres">
-          <th colspan="3">{{ matiere.nomMatiere }}</th>
-        </ng-container>
-        <th></th>
-      </tr>
-      <tr>
-        <th></th>
-        <ng-container *ngFor="let matiere of matieres">
-          <th>Test</th>
-          <th>Ds</th>
-          <th>Examen</th>
-        </ng-container>
-        <th></th>
-      </tr>
-    </thead>
-    <tbody>
-        <ng-container *ngFor="let etd of etds">
-            <tr>
-              <td>{{ etd.cin }} - {{ etd.nom }} {{ etd.prenom }}</td>
-                <ng-container *ngFor="let matiere of matieres">
-                  <ng-container *ngIf="editingId !== etd.id; else editMode">
-                    <td>{{ getNote(etd.id, matiere.idMatiere, Test) }}</td>
-                    <td>{{ getNote(etd.id, matiere.idMatiere, Ds) }}</td>
-                    <td>{{ getNote(etd.id, matiere.idMatiere, Examen) }}</td>
-                  </ng-container>
-                  <ng-template #editMode>
-                    <td><input type="number" [(ngModel)]="editedValues[etd.id + '-' + matiere.idMatiere + '-Test']" [value]="editedValues[etd.id + '-' + matiere.idMatiere + '-Test']" class="narrow-input"/></td>
-                    <td><input type="number" [(ngModel)]="editedValues[etd.id + '-' + matiere.idMatiere + '-Ds']" [value]="editedValues[etd.id + '-' + matiere.idMatiere + '-Ds']" class="narrow-input"/></td>
-                    <td><input type="number" [(ngModel)]="editedValues[etd.id + '-' + matiere.idMatiere + '-Examen']" [value]="editedValues[etd.id + '-' + matiere.idMatiere + '-Examen']" class="narrow-input"/></td>
-                  </ng-template>
-                </ng-container>
-                <td *ngIf="editingId !== etd.id; else editButtons">
-                  <a class="edit" title="Edit" data-toggle="tooltip" (click)="toggleEditMode(etd)"><i class="material-icons">&#xE254;</i></a>
-                </td>
-                <ng-template #editButtons>
-                  <td>
-                    <a class="save" title="save" data-toggle="tooltip" (click)="saveChanges(etd)"><i class="material-icons">&#xF272;</i></a>
-                    <a class="delete" title="cancel" data-toggle="tooltip" (click)="cancelEdit()"><i class="material-icons">&#xF272;</i></a>
-                  </td>
-                </ng-template>
-            </tr>
-          </ng-container>
-    </tbody>
-  </table>
+  <div class="row justify-content-center">
+    <div class="col-md-6"> <!-- Adjust the column width as needed -->
+      <form [formGroup]="form">
+        <div class="form-group">
+          <label for="classe"><h5>Classe:</h5></label>
+          <select class="form-control" id="cls" formControlName="cls" (change)="onClassChange()">
+            <option value="">Selectionner une classe</option>
+            <option *ngFor="let classe of classes" [value]="classe.idclasse">{{ classe.nomClasse }}</option>
+          </select>
+        </div>
+      </form>
+    </div>
+  </div>
+
+  <div class="container-fluid">
+    <div class="table-wrapper">
+      <div class="table-title">
+        <div class="row">
+            <div class="col-sm-8"><h2>Liste <b>Notes</b></h2></div>
+        </div>
+      </div>
+      <table *ngIf="etds.length > 0" class="table table-bordered">
+        <thead>
+          <tr>
+            <th>Etudiant</th>
+            <th *ngFor="let module of modules" [attr.colspan]="module.listeMatieres.length*3">
+              <div>{{ module.nomModule }}</div>
+            </th>
+            <th>Actions</th>
+          </tr>
+          <tr>
+            <th></th>
+            <ng-container *ngFor="let matiere of matieres">
+              <th colspan="3">{{ matiere.nomMatiere }}</th>
+            </ng-container>
+            <th></th>
+          </tr>
+          <tr>
+            <th></th>
+            <ng-container *ngFor="let matiere of matieres">
+              <th>Test</th>
+              <th>Ds</th>
+              <th>Examen</th>
+            </ng-container>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+            <ng-container *ngFor="let etd of etds">
+                <tr>
+                  <td>{{ etd.cin }} - {{ etd.nom }} {{ etd.prenom }}</td>
+                    <ng-container *ngFor="let matiere of matieres">
+                      <ng-container *ngIf="editingId !== etd.id; else editMode">
+                        <td>{{ getNote(etd.id, matiere.idMatiere, Test) }}</td>
+                        <td>{{ getNote(etd.id, matiere.idMatiere, Ds) }}</td>
+                        <td>{{ getNote(etd.id, matiere.idMatiere, Examen) }}</td>
+                      </ng-container>
+                      <ng-template #editMode>
+                        <td><input type="number" [(ngModel)]="editedValues[etd.id + '-' + matiere.idMatiere + '-Test']" [value]="editedValues[etd.id + '-' + matiere.idMatiere + '-Test']" class="narrow-input"/></td>
+                        <td><input type="number" [(ngModel)]="editedValues[etd.id + '-' + matiere.idMatiere + '-Ds']" [value]="editedValues[etd.id + '-' + matiere.idMatiere + '-Ds']" class="narrow-input"/></td>
+                        <td><input type="number" [(ngModel)]="editedValues[etd.id + '-' + matiere.idMatiere + '-Examen']" [value]="editedValues[etd.id + '-' + matiere.idMatiere + '-Examen']" class="narrow-input"/></td>
+                      </ng-template>
+                    </ng-container>
+                    <td *ngIf="editingId !== etd.id; else editButtons">
+                      <a class="edit" title="Edit" data-toggle="tooltip" (click)="toggleEditMode(etd)"><i class="material-icons">&#xE254;</i></a>
+                    </td>
+                    <ng-template #editButtons>
+                      <td>
+                        <a class="save" title="save" data-toggle="tooltip" (click)="saveChanges(etd)"><i class="material-icons">&#xF272;</i></a>
+                        <a class="delete" title="cancel" data-toggle="tooltip" (click)="cancelEdit()"><i class="material-icons">&#xF272;</i></a>
+                      </td>
+                    </ng-template>
+                </tr>
+              </ng-container>
+        </tbody>
+      </table>
+    </div>
+  </div>
   
