--- a/src/app/update-classe/update-classe.component.html
+++ b/src/app/update-classe/update-classe.component.html
@@ -21,7 +21,7 @@
       <div class="col-md-8">
           <div class="panel panel-default">
               <div class="panel-heading text-center">
-                  <h3 class="panel-title">Update Classe</h3>
+                  <h3 class="panel-title">Modifier Classe</h3>
               </div>
               <div class="panel-body">
                   <form [formGroup]="frominput" (ngSubmit)="updateclasse()">
@@ -34,7 +34,7 @@
                           <input type="text" class="form-control" id="niveauclasse" formControlName="niveauclasse">
                       </div>
                       <div class="text-center">
-                          <button type="submit" class="btn btn-primary btn-update">Update</button> <!-- Ajout de la classe "btn-update" -->
+                          <button type="submit" class="btn btn-primary btn-update">Modifier</button> <!-- Ajout de la classe "btn-update" -->
                       </div>
                   </form>
               </div>
