--- a/src/app/update-specialite/update-specialite.component.html
+++ b/src/app/update-specialite/update-specialite.component.html
@@ -21,7 +21,7 @@
       <div class="col-md-6">
           <div class="panel panel-default">
               <div class="panel-heading text-center">
-                  <h3 class="panel-title">Update specialite</h3>
+                  <h3 class="panel-title">Modifier Specialite</h3>
               </div>
               <div class="panel-body">
                   <form [formGroup]="frominput" (ngSubmit)="updatespec()">
@@ -34,7 +34,7 @@
                           <input type="text" class="form-control" id="nomspec" formControlName="nomspec">
                       </div>
                       <div class="text-center">
-                          <button type="submit" class="btn btn-primary btn-update">Update</button>
+                          <button type="submit" class="btn btn-primary btn-update">Modifier</button>
                       </div>
                   </form>
               </div>
